--- a/pages/signup.html
+++ b/pages/signup.html
@@ -14,26 +14,30 @@
 <body>
     <nav class="nav-container flex-row">
         <a href="../index.html">
-            <h5>JSTphone</h5>
+            <h5>ezBuy</h5>
         </a>
         <input name="name" type="text" class="input-area text-base " placeholder="Search...">
         <ul class="flex-row">
             <li>
-                <button class="btn btn-solid-primary text-white"><a href="./login.html">Login</a></button>
+                <a href="">
+                    <div class="badge badge-icon">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                </a>
             </li>
             <li>
                 <a href="">
-                    <div class="badge badge-icon text-xl">
-                        <i class="fa-regular fa-heart  "></i>
-                        <div class="number badge-secondary text-white">4</div>
+                    <div class="badge badge-icon">
+                        <i class="fa-regular fa-heart fa-lg"></i>
+                        <div class="number  badge-secondary text-white">4</div>
                     </div>
                 </a>
             </li>
 
             <li>
                 <a href="">
-                    <div class="badge badge-icon text-xl">
-                        <i class="fas fa-shopping-cart "></i>
+                    <div class="badge badge-icon">
+                        <i class="fas fa-shopping-cart fa-lg"></i>
                         <div class="number badge-secondary text-white">2</div>
                     </div>
                 </a>
