--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <nav class="nav-container flex-row">
-        <a href="../index.html">
+        <a href="./index.html">
             <h5>ezBuy</h5>
         </a>
         <input name="name" type="text" class="input-area text-base " placeholder="Search...">
         <ul class="flex-row">
             <li>
-                <a href="">
+                <a href="./pages/login.html">
                     <div class="badge badge-icon">
                         <i class="fa-solid fa-user"></i>
                     </div>
