--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="./pages/wishlist.html">
                     <div class="badge badge-icon">
                         <i class="fa-regular fa-heart fa-lg"></i>
                         <div class="number  badge-secondary text-white">4</div>
@@ -34,7 +34,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="./pages/cart.html">
                     <div class="badge badge-icon">
                         <i class="fas fa-shopping-cart fa-lg"></i>
                         <div class="number badge-secondary text-white">2</div>
