--- a/pages/signup.html
+++ b/pages/signup.html
@@ -20,14 +20,14 @@
         <input name="name" type="text" class="input-area text-base " placeholder="Search...">
         <ul class="flex-row">
             <li>
-                <a href="">
+                <a href="./login.html">
                     <div class="badge badge-icon">
                         <i class="fa-solid fa-user"></i>
                     </div>
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="./wishlist.html">
                     <div class="badge badge-icon">
                         <i class="fa-regular fa-heart fa-lg"></i>
                         <div class="number  badge-secondary text-white">4</div>
@@ -36,7 +36,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="./cart.html">
                     <div class="badge badge-icon">
                         <i class="fas fa-shopping-cart fa-lg"></i>
                         <div class="number badge-secondary text-white">2</div>
