feat: added logout button

--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -20,9 +20,9 @@
         <input name="name" type="text" class="input-area text-base " placeholder="Search...">
         <ul class="flex-row">
             <li>
-                <a href="../pages/login.html">
+                <a href="../pages/login.html" title="Logout">
                     <div class="badge badge-icon">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-arrow-right-from-bracket fa-lg"></i>
                     </div>
                 </a>
             </li>
