feat:added products page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="text-center">
                 <h3 class="text-white hero-heading  fw-500">iPhone 13</h3>
                 <button class="btn  link-btn text-lg text-primary">
-                    <a href="#">Buy Now</a>
+                    <a href="./pages/product.html">Buy Now</a>
                 </button>
             </div>
         </section>
@@ -98,25 +98,25 @@
             <h3 class="flex-row section-heading fw-400">Browse Category</h3>
             <div class="product-list flex-row">
                 <div class="category-item">
-                    <a href="">
+                    <a href="./pages/product.html">
                         <img loading="lazy" class="image-responsive" src="./asset/headphones.jpg" alt="headphones" />
                         <div class="category-overlay text-center">Headphones</div>
                     </a>
                 </div>
                 <div class="category-item">
-                    <a href="">
+                    <a href="./pages/product.html">
                         <img loading="lazy" class="image-responsive" src="./asset/laptop.jpg" alt="laptop" />
                         <div class="category-overlay text-center">Laptops</div>
                     </a>
                 </div>
                 <div class="category-item">
-                    <a href="">
+                    <a href="./pages/product.html">
                         <img loading="lazy" class="image-responsive" src="./asset/laptop.jpg" alt="laptop" />
                         <div class="category-overlay text-center">Laptops</div>
                     </a>
                 </div>
                 <div class="category-item">
-                    <a href="">
+                    <a href="./pages/product.html">
                         <img loading="lazy" class="image-responsive" src="./asset/headphones.jpg" alt="headphones" />
                         <div class="category-overlay text-center">Headphones</div>
                     </a>
