style: added responsiveness

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -51,7 +51,7 @@
             <div class="horizontal-card flex-row">
                 <img class="image-responsive" src="../asset/headphones.jpg" loading="lazy" alt="product image">
                 <div class="card-details-container ">
-                    <h3 class="text-xl">Sony Headphones</h3>
+                    <h5>Sony Headphones</h5>
                     <p class="product-details text-base fw-500">Rs.41,990 <del class="fw-300 text-sm">Rs.49,990</del>
                     </p>
                     <p class="text-base fw-400">16% off </p>
@@ -70,7 +70,7 @@
             <div class="horizontal-card flex-row">
                 <img class="image-responsive" src="../asset/ipad-air.png" loading="lazy" alt="product image">
                 <div class="card-details-container ">
-                    <h3 class="text-xl">iPad Air</h3>
+                    <h5>iPad Air</h5>
                     <p class="product-details text-base fw-500">Rs.41,990 <del class="fw-300 text-sm">Rs.49,990</del>
                     </p>
                     <p class="text-base fw-400">16% off </p>
