styles: added media query

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="nav-container flex-row">
         <a href="./index.html">
-            <h5>ezBuy</h5>
+            <h5 class="fw-500">ezBuy</h5>
         </a>
         <input name="name" type="text" class="input-area text-base " placeholder="Search...">
         <ul class="flex-row">
