--- a/pages/product.html
+++ b/pages/product.html
@@ -82,7 +82,7 @@
             </div>
         </aside>
         <div class="product">
-            <h3 class="text-center fw-400">Seach Result For "headphones"</h3>
+            <h4 class="text-center fw-400 product-heading">Seach Result For "headphones"</h4>
             <div class="product-list flex-row">
                 <div class="vertical-card flex-column card-dismiss card-shadow">
                     <a href="" class="text-center "><i class="fa-solid fa-heart"></i></a>
